--- a/Changes
+++ b/Changes
@@ -1,5 +1,34 @@
 Revision history for Perl module HTML::Clean
 --------------------------------------------
+0.7  Sat Apr 24 03:04:45 MET DST 1999
+
+	- Add missing 'hairy.html' file to fix broken test cases.
+
+	- Add alt="" items to images without alt tags.
+
+	- Apply same compatibility option to Verdana and Futura font.
+
+
+0.6  Fri Apr 23 14:03:30 MET DST 1999 
+
+	- Now removes whitespace from within tags, like this:
+	   <table  > becomes <table>
+
+	- Do a second pass at whitespace removal
+
+        - Remove some default elements from specific tags
+          border=0 from table, method=get from forms, etc.
+
+	- Remove default port 80 from URLs
+
+        - New option, lowercasetags to make all tags lowercase.
+	  Quantitative testing shows that this improves compressibility,
+	  it should make pages download faster over modems with compression
+	  turned on.
+
+	- Expanded tests.  Use lynx to quickly see if the changed HTML
+	  'looks' correct.
+
 
 0.5  Mon Feb 22 13:12:32 MET 1999 
 
