--- a/README
+++ b/README
@@ -1,85 +1,55 @@
-HTML::Clean - Cleans up HTML code for web browsers, not humans
--------------------------------------------------------------------
+HTML-Clean
 
-1. INTRODUCTION
+The README is used to introduce the module and provide instructions on
+how to install the module, any machine dependencies it may have (for
+example C compilers and installed libraries) and any other information
+that should be provided before the module is installed.
 
-  --    ``The HTML Compiler!'' 
-
-The majority of the web pages of the internet today are 
-much larger than they need to be.  The reason for this is 
-that HTML tends to be stored in a human readable format, with
-indenting, newlines and comments.
-
-However, all of these comments, whitespace etc. are ignored by
-the browser, and needlessly lengthen download times.
-
-Second, many people are using WYSIWYG HTML editors these days.
-This makes creating content easy.  However these editors can
-cause a number of compatibility problems by tying themselves to
-a particular browser or operating system.
-
-Enter HTML::Clean.
-
-The HTML::Clean module encapsulates a number of HTML optimizations
-and cleanups.  The end result is HTML that loads faster, displays
-properly in more browsers.  Think of it as a compiler that
-translates HTML input into optimized machine readable code.
-
-Uses
-
-You can use the library in your perl-cgi scripts to optimize data.  Or
-use the included htmlclean script to preprocess HTML files or templates
-on your server.
-
-The results should be pages that load faster, less load on your web 
-server and better cross-platform HTML.
-
-To read about the latest features, see the Changes file.  To find
-out about known bugs and to see what's planned for future versions,
-see the TODO file.
+A README file is required for CPAN modules since CPAN extracts the README
+file from a module distribution so that people browsing the archive
+can use it to get an idea of the module's uses. It is usually a good idea
+to provide version information here so that people can decide whether
+fixes for the module are worth downloading.
 
 
-2. AVAILABILITY
+INSTALLATION
 
-You can get the latest version of the HTML::Clean module from the 
-Comprehensive Perl Archive Network (CPAN) or from the author's homepage:
+To install this module, run the following commands:
 
-    http://www.perl.org/CPAN/modules/by-module/HTML/
-    http://people.itu.int/~lindner/
+	perl Makefile.PL
+	make
+	make test
+	make install
 
+SUPPORT AND DOCUMENTATION
 
-3. PREREQUISITES
+After installing, you can find documentation for this module with the
+perldoc command.
 
-The HTML module requires the following:
+    perldoc HTML::Clean
 
-    Perl 5.004
+You can also look for information at:
 
-The HTML::Clean module may work with earlier versions of the above, but the
-author hasn't tested this.  The latest versions can be obtained from CPAN:
+    RT, CPAN's request tracker (report bugs here)
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=HTML-Clean
 
-    http://www.perl.org/CPAN/
+    AnnoCPAN, Annotated CPAN documentation
+        http://annocpan.org/dist/HTML-Clean
 
+    CPAN Ratings
+        http://cpanratings.perl.org/d/HTML-Clean
 
-4. INSTALLATION
-
-To build this module, run the following commands:
-
-    perl Makefile.PL
-    make
-    make test
-    make install
-
-
-5. COPYRIGHT
-
-Copyright (c) 1999 ITU.  All rights reserved.  This program
-is free software; you can redistribute it and/or modify it under the
-same terms as Perl itself.
+    Search CPAN
+        http://search.cpan.org/dist/HTML-Clean/
 
 
-6. AUTHOR INFORMATION
+LICENSE AND COPYRIGHT
 
-Paul Lindner
-paul.lindner@itu.int
-http://people.itu.int/~lindner/
+Copyright (C) 2011 Daniel de Oliveira Mantovani
+
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
+
+See http://dev.perl.org/licenses/ for more information.
 
